Fixed mobile width overflow on input

--- a/css/style.css
+++ b/css/style.css
@@ -1239,14 +1239,14 @@ nav .facebook a {
   }
   .content .bottom-lockup input.email {
     float: none;
-    width: 90%;
+    width: 80%;
     min-width: 280px;
     margin: 0 auto;
     margin-top: 20px;
   }
   .content .bottom-lockup input.submit {
     float: none;
-    width: 90%;
+    width: 80%;
     min-width: 280px;
     margin: 0 auto;
     margin-top: 10px;
