--- a/less/main.less
+++ b/less/main.less
@@ -262,7 +262,7 @@ nav {
 				//signup field
 
 				input.email {
-					width: 90%;
+					width: 80%;
 					min-width: 280px;
 					float: none;
 					margin: 0 auto;
@@ -270,7 +270,7 @@ nav {
 				}
 			
 				input.submit {
-					width: 90%;
+					width: 80%;
 					min-width: 280px;
 					float: none;
 					margin: 0 auto;
